ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.5.1
    • Affects Version/s: 3.3.3
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Storage 2016-11-21, Storage 2016-12-12
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In versions prior to 3.3.3, running repairDatabase on a new, different-cased database returns this error:

      {
      	"ok" : 0,
      	"errmsg" : "db already exists with different case already have: [a] trying to create [A]",
      	"code" : 13297
      }
      

      In 3.3.3+, the same command terminates the server:

      2016-04-28T16:11:12.503-0400 F STORAGE  [conn1] Unexpected exception encountered while reopening database after repair.
      2016-04-28T16:11:12.503-0400 F -        [conn1] terminate() called. An exception is active; attempting to gather more information
      2016-04-28T16:11:12.560-0400 F -        [conn1] DBException::toString(): 13297 db already exists with different case already have: [a] trying to create [A]
      Actual exception type: mongo::UserException
      

            Assignee:
            Daniel Gottlieb (Inactive)
            Reporter:
            Kamran K. (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: