SERVER-23976: Input validate database names for repairDatabase.